# upgrade-tool-C

./: .gitignore  .gitmodules  CMakeLists.txt
lib/HDiffPatch/builds/vc/: HDiff.vcxproj  HDiffPatch.sln  HPatch.vcxproj  unitTest.vcxproj
lib/HDiffPatch/libHDiffPatch/HDiff/: diff.cpp  diff.h
lib/HDiffPatch/libHDiffPatch/HPatch/: patch.c
lib/googletest/googletest/docs/: Primer.md  V1_5_Primer.md  V1_6_Primer.md  V1_7_Primer.md
lib/md5/: md5.c  md5.h
lib/zlib/: ChangeLog  FAQ  make_vms.com
lib/zlib/contrib/amd64/: amd64-match.S
lib/zlib/contrib/asm686/: match.S
lib/zlib/contrib/gcc_gvmat64/: gvmat64.S
lib/zlib/contrib/inflate86/: inffast.S
lib/zlib/contrib/masmx64/: gvmat64.asm
lib/zlib/contrib/masmx86/: inffas32.asm  match686.asm
lib/zlib/doc/: algorithm.txt  rfc1950.txt  rfc1951.txt  rfc1952.txt
lib/zlib/examples/: zlib_how.html
lib/zlib/old/: visual-basic.txt
lib/zlib/os400/: zlib.inc
patcher.xcodeproj/: project.pbxproj
patcher.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: hash.h  main.cpp  pat_file.h
src/diff/: DiffManager.cpp  DiffManager.h
src/patch/: PatchManager.cpp  PatchManager.h
src/stl/: BytesVector.h  CString.cpp  CString.h
src/util/: DiffUtil.h  PatchUtil.h  common.cpp  common.h  fileutils.cpp  fileutils.h  patchStream.h  types.h
tests/differTests/: main.cpp
tests/differTests.xcodeproj/: project.pbxproj
tests/patchTests/: main.cpp
tests/patchTests.xcodeproj/: project.pbxproj
update-tool.xcworkspace/: contents.xcworkspacedata
update-tool.xcworkspace/xcshareddata/: update-tool.xcscmblueprint
(+6 files in other folders)
